# google-keep-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  PROGRESS.md  README.md  pyproject.toml
.claude/commands/: block.md  capture.md  catchup.md  doing.md  done.md  explore.md  next.md  progress.md  standup.md  tidy.md  todo.md  waiting.md
docs/superpowers/plans/: 2026-03-25-reduce-mcp-output-context.md  2026-03-26-pre-commit-setup.md
docs/superpowers/specs/: 2026-03-25-reduce-mcp-output-context-design.md  2026-03-26-pre-commit-setup-design.md  2026-03-27-append-tool-design.md
src/google_keep_mcp/: __init__.py  _state.py  config.py  models.py  server.py
src/google_keep_mcp/tools/: __init__.py  _helpers.py  labels.py  lists.py  notes.py  search.py  sync.py
tests/: conftest.py  test_labels.py  test_lists.py  test_notes.py  test_search.py
