[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "google-keep-mcp"
version = "0.1.0"
description = "MCP server wrapping gkeepapi for Google Keep access"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gkeepapi>=0.17.1",
    "mcp[cli]>=1.26.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.0",
    "ruff>=0.15.7",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
]

[project.scripts]
google-keep-mcp = "google_keep_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/google_keep_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
# Accepting ruff defaults: double quotes, 4-space indent, magic trailing commas
